# Job_comp_checker

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
.claude/: launch.json
dashboard/: app.py  charts.py
dashboard/views/: jobs_browser.py  pipeline.py  portfolio.py  resumes.py  single_job.py
db/: connection.py  queries.py  schema.sql
ingestion/: ashby.py  base.py  discovery.py  greenhouse.py  http.py  lever.py  manual.py  pipeline.py  registry.py
matching/: embeddings.py  engine.py
requirements_extraction/: claude_client.py  combined.py  cooccurrence.py  explicit.py  inferred.py  models.py  pipeline.py
resume/: credibility.py  parser.py  taxonomy.py
scripts/: build_reference_stats.py  fetch_reference_data.py  list_jobs.py  load_taxonomy.py  paste_job.py  run_extraction.py  run_ingestion.py  show_requirements.py
