[project]
name = "job-comp-checker"
version = "0.1.0"
description = "Compare resumes against job postings, surfacing explicit/inferred requirement gaps."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "sentence-transformers>=3.0",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "rapidfuzz>=3.9",
    "pandas>=2.2",
    "plotly>=5.24",
    "streamlit>=1.39",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingestion*", "requirements_extraction*", "resume*", "matching*", "dashboard*", "db*"]
